[tool.poetry]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = ["Ran <rliu@student.42.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26"

[build-system]
requires = ["setuptools >= 42", "wheel"]
build-backend = "setuptools.build_meta"

